--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-CONNECTION_STRING = mongodb+srv://anmolkumar6943:@anmolcluster1.vhobohe.mongodb.net/food?retryWrites=true&w=majority
+CONNECTION_STRING = mongodb+srv://anmolkum:@anmolcluster1.vhobohe.mongodb.net/food?retryWrites=true&w=majority
